# haskellbook

./: Ch05Ex-types.hs  Ch10-theDatabase.hs  Ch12-smart.hs  Ch12Ex-unfolds.hs  Ch13Ex.hs  Ch14Ex-tests.hs  Ch15-Monoids.hs  Ch15-Semigroups.hs  Ch15Ex-Monoid.hs  Ch16-Functor.hs  Ch16-FunctorQuickCheck.hs  Ch17-Applicative-Ex.hs  Ch17-Applicative-QuickTest.hs  Ch17-Applicative-Validation.hs  Ch17-Applicative-zipList.hs  Ch17-Applicative.hs  Ch18-BadMonad.hs  Ch18-Monad.hs  Ch18-MonadComposition.hs  Ch20-Foldable.hs  Ch21-Traversable.hs  Ch21-httpStuff.hs  Ch22-Reader.hs  Ch22-ReaderPractice.hs  Ch23-FizzBuzz.hs  Ch23-MyState.hs  Ch23-RandomExample.hs  Ch23-RandomExample2.hs  Ch23-State.hs  Ch24-AltParsing.hs  Ch24-AltParsing2.hs  Ch24-Fractions.hs  Ch24-FractionsEx.hs  Ch24-LearnParsers.hs  Ch24-LogFile.hs  Ch24-PositiveInteger.hs  Ch24-Semver.hs  Ch24-ini.hs  README.md  arith4.hs  (+11 more)
hello-haskell/: hello-haskell.cabal
src/: Ch06-typeclasses.hs  Ch07-Penguin.hs  Ch09Ex-ciphers.hs  Ch11-BinaryTree.hs  Ch11-records.hs  Ch11-tooManyGoats.hs  Ch12-smart.hs  Ch12Ex-unfolds.hs  Ch14Ex-tests.hs  Ch15-Semigroups.hs  Ch15Ex-Mem.hs  Ch15Ex-Monoid.hs  Ch16-FunctorQuickCheck.hs  Ch16Ex-Functor.hs  Ch17-Applicative-Ex.hs  Ch17-Applicative-Validation.hs  Ch17-Applicative-zipList.hs  Ch17-Applicative.hs  Ch18-EitherMonad.hs  Ch18-Monad.hs  Ch18-MonadComposition.hs  Ch20-Foldable.hs  Ch21-Traversable.hs  Ch22-Reader.hs  Ch22-ReaderPractice.hs  Ch23-FizzBuzz.hs  Ch23-MyState.hs  Ch23-RandomExample2.hs  Ch23-State.hs  Ch24-Fractions-parsers.hs  Ch24-LogFile.hs  Ch24-Marshalling.hs  Ch24-ParsePhone.hs  Ch24-PositiveInteger.hs  Ch24-Semver.hs  Ch24-ipv4.hs  Ch24-ipv6.hs  Ch25-IdentityT.hs  Ch25-Twinplicative.hs  Ch26-Ex.hs  (+22 more)
