name:                hsbook
version:             0.1.0.0
synopsis:            Exercises from haskellbook.com
description:         Please see README.md
homepage:            https://github.com/dmvianna/hsbook#readme
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna@gmail.com
copyright:           2016 Daniel Vianna
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       QuickCheck >= 2.8.2
                     , checkers
                     , base >= 4.7 && < 5
                     , bifunctors >= 5.2
                     , bytestring
                     , containers >= 0.5.6.2
                     , hspec
                     , raw-strings-qq
                     , scotty
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , trifecta
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmvianna/hsbook
