name:                hsbook
version:             0.1.0.0
synopsis:            Exercises from haskellbook.com
description:         Please see README.md
homepage:            https://github.com/dmvianna/hsbook#readme
license:             OtherLicense
license-file:        LICENSE
author:              Daniel Vianna
maintainer:          dmlvianna@gmail.com
copyright:           2016 Daniel Vianna
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       QuickCheck
                     , base
                     , bifunctors
                     , bytestring
                     , checkers
                     , containers
                     , hspec
                     , mtl
                     , parsers
                     , random
                     , raw-strings-qq
                     , scotty
                     , text
                     , transformers
                     , trifecta
                     , word8
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dmvianna/hsbook
